--- a/SingleViewDemo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/SingleViewDemo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -77,16 +77,16 @@
             </objects>
             <point key="canvasLocation" x="585" y="7"/>
         </scene>
-        <!--Table View Controller - Calendar-->
+        <!--Calendar Table View Controller - Calendar-->
         <scene sceneID="UPU-g8-00w">
             <objects>
-                <tableViewController id="4Rc-fN-5Tk" sceneMemberID="viewController">
+                <tableViewController id="4Rc-fN-5Tk" customClass="BUCalendarTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Odm-cq-QR5">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="sSz-g3-9yh" detailTextLabel="CMY-Ia-Tcf" style="IBUITableViewCellStyleSubtitle" id="lHa-Lz-Xac">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCell" textLabel="sSz-g3-9yh" detailTextLabel="CMY-Ia-Tcf" style="IBUITableViewCellStyleSubtitle" id="lHa-Lz-Xac">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -160,14 +160,6 @@
         <image name="BUToday.png" width="77" height="77"/>
         <image name="Calendar_01.png" width="77" height="77"/>
     </resources>
-    <classes>
-        <class className="BUViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BUViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
