--- a/SingleViewDemo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/SingleViewDemo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -122,10 +122,10 @@
             </objects>
             <point key="canvasLocation" x="1116" y="315"/>
         </scene>
-        <!--Table View Controller - Event-->
+        <!--Event Detail Table View Controller - Event-->
         <scene sceneID="Vgf-SW-ggE">
             <objects>
-                <tableViewController id="Rq5-2F-usW" sceneMemberID="viewController">
+                <tableViewController id="Rq5-2F-usW" customClass="BUEventDetailTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="ENI-wb-0b7">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -261,6 +261,14 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Event" id="5RB-f0-K4e"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="pZ2-os-Fza" id="XdV-nH-Ntf"/>
+                        <outlet property="emailLabel" destination="6jb-LL-3Sp" id="Apr-Wa-ZTe"/>
+                        <outlet property="locationLabel" destination="VPL-VE-z7K" id="51m-4s-TaQ"/>
+                        <outlet property="phoneLabel" destination="Y63-eA-F4f" id="b2S-wy-CLF"/>
+                        <outlet property="summaryLabel" destination="owt-NG-Ju7" id="nhX-Mi-XSh"/>
+                        <outlet property="timeLabel" destination="Dxz-ny-fSt" id="AoZ-eH-FTp"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRu-2O-3nl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -310,6 +318,17 @@
     <classes>
         <class className="BUCalendarTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BUCalendarTableViewController.h"/>
+        </class>
+        <class className="BUEventDetailTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BUEventDetailTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descriptionLabel" candidateClass="UITableViewCell"/>
+                <relationship kind="outlet" name="emailLabel" candidateClass="UITableViewCell"/>
+                <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="phoneLabel" candidateClass="UITableViewCell"/>
+                <relationship kind="outlet" name="summaryLabel" candidateClass="UITableViewCell"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UITableViewCell"/>
+            </relationships>
         </class>
         <class className="BUViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BUViewController.h"/>
